// Copyright (c) Alex Jamieson-Binnie. All rights reserved.
// Licensed under the GPL. See License.txt in the project root for license information.

syntax = "proto3";

import "narupa/protocol/trajectory/get_frame.proto";

package narupa.protocol.trajectory;

/* A service which provides access to frames of a trajectory, which may either be precomputed or represent a live simulation. It can also be used to obtain one or more frames on demand, allowing molecules or trajectories to be generated based on requests */
service TrajectoryService {

  /* Subscribe to a continuous updating source of frames. Frames are added to the stream when they are available */
  rpc SubscribeFrames (GetFrameRequest) returns (stream GetFrameResponse);

  /* Subscribe to a continuous updating source of frames. The client gets the latest available frame at the time of transmission. */
  rpc SubscribeLatestFrames (GetFrameRequest) returns (stream GetFrameResponse);

  /* Request a set of frames specified in the request */
  rpc GetFrames (GetFrameRequest) returns (stream GetFrameResponse);

  /* Request a specific frame. This may be used to provider a 'molecule-on-demand' service */
  rpc GetFrame (GetFrameRequest) returns (GetFrameResponse);
}
